# blurays

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pages.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  lookup.rs  main.rs  publish.rs  server.rs
ui/: index.html  manifest.webmanifest  movies.json  styles.css  sw.js
ui/js/: ean13.js  lookup.js  main.js  scan.js  store.js  theme.js  views.js
