[package]
name = "shelf"
version = "0.1.0"
description = "A no-frills Blu-ray / DVD / 4K collection catalog"
authors = ["Johnathan Milley"]
edition = "2021"
license = "MIT"

[lib]
name = "shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
